Issue #2271499 by artemln: Fixed Overlaped title on edit form.

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ table th {
  * Tabs ===============================================================
  */
 .tabs {
-  position:absolute;
+  float:right;
   right:0px;
   }
 
